# InertialSense

./: README.md
StarTrack/: .gitignore  .gitmodules  17cm_square.StarTrack.yaml  8x11-paper.truth  8x11_Landscape.StarTrack.yaml  CMakeLists.txt  Cube.StarTrack.yaml  LICENSE  README.md  StarTrack.yaml
StarTrack/debug-build-startrack/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  StarTrack.cbp  StarTrack_tests[1]_include.cmake  cmake_install.cmake
StarTrack/debug-build-startrack/.cmake/api/v1/reply/: cache-v2-cb57195fc337f4b80c96.json  cmakeFiles-v1-896f34fcdc4732f82bf1.json  codemodel-v2-b10a83e70055dc429d2d.json  directory-lib.inertial-sense-sdk-Debug-9749d5d981e6f8c490be.json  directory-lib.inertial-sense-sdk.ExampleProjects.Bootloader-Debug-1d4f47b122fbb391d822.json  directory-lib.inertial-sense-sdk.ExampleProjects.Logger-Debug-5e269e5b46b8dd2ddd7f.json  directory-lib.pigpio-Debug-93a1c6b103162fc5de15.json  index-2023-05-04T20-17-38-0472.json  target-ISAsciiExample-Debug-119d874642b04d0e2002.json  (+16 more)
StarTrack/debug-build-startrack/lib/inertial-sense-sdk/: Makefile  cmake_install.cmake  inertial-sense-sdk.cbp
StarTrack/debug-build-startrack/lib/inertial-sense-sdk/ExampleProjects/: ExampleProjects.cbp  Makefile  cmake_install.cmake
StarTrack/debug-build-startrack/lib/inertial-sense-sdk/cltool/: Makefile  cltool.cbp  cmake_install.cmake
StarTrack/debug-build-startrack/lib/pigpio/: Makefile  cmake_install.cmake  pigpio.cbp  pigpioTargets.cmake  setup.py
StarTrack/debug-build-ubuntu23.04/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  StarTrack.cbp  StarTrack_tests[1]_include.cmake  cmake_install.cmake
StarTrack/debug-build-ubuntu23.04/lib/inertial-sense-sdk/: Makefile  cmake_install.cmake  inertial-sense-sdk.cbp
StarTrack/debug-build-ubuntu23.04/lib/inertial-sense-sdk/ExampleProjects/: ExampleProjects.cbp  Makefile  cmake_install.cmake
StarTrack/debug-build-ubuntu23.04/lib/inertial-sense-sdk/cltool/: Makefile  cltool.cbp  cmake_install.cmake
StarTrack/debug-build-ubuntu23.04/lib/pigpio/: Makefile  cmake_install.cmake  pigpio.cbp  pigpioTargets.cmake  setup.py
StarTrack/include/: Blinky.h  StarTrack.h  StarTrackBase.h  filesystem.hpp
StarTrack/scripts/: install.sh  pigpiod.service  startrack.service
StarTrack/src/: Blinky.cpp  StarTrack.cpp  StarTrackBase.cpp  main.cpp
StarTrack/test/: CMakeLists.txt  StarTrack_tests.cpp  test.truth
StarTrack/test_win/: main.cpp
(+77 files in other folders)
